--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VALID_PASSWORD_ARRAY="720DF6C2482218518FA20FDC52D4DED7ECC043AB" #seperated by comma
